--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,11 @@
 body
-  padding: 50px
+  padding: 0
+  margin: 0
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
   color: #00B7FF
+
+html, body, #map
+  width: 100%
+  height: 100%
