--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,17 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>{{title}}</title>
+    <link rel="stylesheet"  href="vendor/leaflet/dist/leaflet.css">
+    <link rel="stylesheet"  href="stylesheets/style.css">
+</head>
+<body>
+<div id="map"></div>
+<script src="vendor/leaflet/dist/leaflet.js"></script>
+<script src="vendor/jquery/dist/jquery.min.js"></script>
+<script src="javascripts/map.js"></script>
+</body>
+</html>
+
