--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
 <body>
 <div id="map"></div>
 <script src="vendor/leaflet/dist/leaflet.js"></script>
+<script src="vendor/Leaflet.label/dist/leaflet.label.js"></script>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
 <script src="javascripts/map.js"></script>
 </body>
