--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -62,3 +62,31 @@ html, body, #map
 .leaflet-label-left:after 
   content: ""
 
+.parallax-marker.label
+  display: block
+  text-align: center
+  font-weight: bold
+  color: rgb(98, 56, 128)
+  text-transform: uppercase
+  text-shadow: rgb(255, 255, 255) 1px 0px 1px, rgb(255, 255, 255) -1px 0px 1px, rgb(255, 255, 255) 0px -1px 1px, rgb(255, 255, 255) 0px 1px 1px
+
+.parallax-marker.label.huge
+  font-size: 96px
+  color: rgba(185, 157, 185, 0.39)
+  text-shadow: none
+.parallax-marker.label.big
+  font-size: 24px
+.parallax-marker.label.medium
+  font-size: 16px
+  color: rgb(121, 85, 125)
+  font-weight: normal
+.parallax-marker.label.a
+  color: #ff0000!important
+.parallax-marker.label.b
+  color: #0000ff!important
+
+.parallax-marker.label.small
+  font-size: 12px
+  text-transform: none
+  font-weight: normal
+  color: rgb(137, 128, 144)
