--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -25,10 +25,7 @@ html, body, #map
   font-weight: bold
   padding: 1px 6px
   position: absolute
-  -webkit-user-select: none
-    -moz-user-select: none
-      -ms-user-select: none
-        user-select: none
+  user-select: none
   white-space: nowrap
   z-index: 6
 
@@ -66,9 +63,9 @@ html, body, #map
   display: block
   text-align: center
   font-weight: bold
-  color: rgb(98, 56, 128)
+  color: #000
   text-transform: uppercase
-  text-shadow: rgb(255, 255, 255) 1px 0px 1px, rgb(255, 255, 255) -1px 0px 1px, rgb(255, 255, 255) 0px -1px 1px, rgb(255, 255, 255) 0px 1px 1px
+  text-shadow: rgb(0, 0, 0) 1px 0 1px, rgb(0, 0, 0) -1px 0 1px, rgb(0, 0, 0) 0 -1px 1px, rgb(0, 0, 0) 0 1px 1px
 
 .parallax-marker.label.huge
   font-size: 96px
@@ -79,14 +76,18 @@ html, body, #map
 .parallax-marker.label.medium
   font-size: 16px
   color: rgb(121, 85, 125)
-  font-weight: normal
+  font-weight: bold
+  z-index: 9999!important
 .parallax-marker.label.a
   color: #ff0000!important
+  text-shadow: 1px 1px 1px rgb(0, 0, 0)
+
 .parallax-marker.label.b
   color: #0000ff!important
+  text-shadow: 1px 1px 1px rgb(255, 255, 255)
 
 .parallax-marker.label.small
   font-size: 12px
   text-transform: none
   font-weight: normal
-  color: rgb(137, 128, 144)
+  color: #fff
