--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div id="map"></div>
+<script src="/socket.io/socket.io.js"></script>
 <script src="vendor/leaflet/dist/leaflet.js"></script>
 <script src="vendor/Leaflet.label/dist/leaflet.label.js"></script>
 <script src="vendor/leaflet.parallax.marker/lib.js"></script>
