--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,6 +13,7 @@
 <script src="vendor/leaflet/dist/leaflet.js"></script>
 <script src="vendor/Leaflet.label/dist/leaflet.label.js"></script>
 <script src="vendor/leaflet.parallax.marker/lib.js"></script>
+<script src="vendor/Leaflet.MovingMarker/MovingMarker.js"></script>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
 <script src="javascripts/map.js"></script>
 </body>
