--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -66,6 +66,7 @@ html, body, #map
   color: #000
   text-transform: uppercase
   text-shadow: rgb(0, 0, 0) 1px 0 1px, rgb(0, 0, 0) -1px 0 1px, rgb(0, 0, 0) 0 -1px 1px, rgb(0, 0, 0) 0 1px 1px
+  z-index: 6000!important
 
 .parallax-marker.label.huge
   font-size: 96px
@@ -77,7 +78,6 @@ html, body, #map
   font-size: 16px
   color: rgb(121, 85, 125)
   font-weight: bold
-  z-index: 9999!important
 .parallax-marker.label.a
   color: #ff0000!important
   text-shadow: 1px 1px 1px rgb(0, 0, 0)
@@ -91,3 +91,6 @@ html, body, #map
   text-transform: none
   font-weight: normal
   color: #fff
+
+.peon
+  z-index: 5000!important
