--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,17 +3,38 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{{title}}</title>
+    <title>Nation Go! - La Place de la Nation est à vous </title>
     <link rel="stylesheet"  href="vendor/leaflet/dist/leaflet.css">
     <link rel="stylesheet"  href="stylesheets/style.css">
+    <link rel="stylesheet"  href="stylesheets/pascal.css">
 </head>
 <body>
 <div id="map"></div>
+
+
+	<div class="dark"></div>
+
+	<div class="logo_container">
+	  <div class="logo"><img src="images/logo-start.png"></div>
+	</div>
+
+	<div class="jauge_container playerA">
+		<div class="jauge_value" style="width:10%"></div>
+	</div>
+
+	<div class="jauge_container playerB">
+		<div class="jauge_value" style="width:10%"></div>
+	</div>
+
+
 <script src="vendor/leaflet/dist/leaflet.js"></script>
 <script src="vendor/Leaflet.label/dist/leaflet.label.js"></script>
 <script src="vendor/leaflet.parallax.marker/lib.js"></script>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
 <script src="javascripts/map.js"></script>
+<script src="javascripts/pascal.js"></script>
+
+
 </body>
 </html>
 
