--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,10 @@
     <div class="dark"></div>
 
     <div class="logo_container">
-        <div class="logo"><img src="images/logo-start.png"></div>
+        <div class="logo">
+            <img src="images/logo-start.png">
+            <div id="winner" class="off">Joueur A<br>gagne la partie !</div>
+        </div>
     </div>
 
     <div class="jauge_container playerA">
